--- a/src/main/java/chimp/ui/Inspector/Inspector.form
+++ b/src/main/java/chimp/ui/Inspector/Inspector.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="chimp.ui.Inspector.Inspector">
-  <grid id="27dc6" binding="MainPane" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="313" height="473"/>
@@ -39,7 +39,12 @@
                 <children>
                   <component id="d9067" class="javax.swing.JTree" binding="tree1" default-binding="true">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <editable value="true"/>
+                    </properties>
+                    <clientProperties>
+                      <JTree.lineStyle class="java.lang.String" value=""/>
+                    </clientProperties>
                   </component>
                 </children>
               </scrollpane>
@@ -112,12 +117,12 @@
                   </component>
                 </children>
               </scrollpane>
-              <component id="57ed5" class="javax.swing.JButton" binding="button1" default-binding="true">
+              <component id="57ed5" class="javax.swing.JButton" binding="commitButton" default-binding="true">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Button"/>
+                  <text value="Commit"/>
                 </properties>
               </component>
             </children>
