--- a/src/main/java/chimp/ui/test/MyForm.form
+++ b/src/main/java/chimp/ui/test/MyForm.form
@@ -22,13 +22,13 @@
           <text value="Label"/>
         </properties>
       </component>
-      <component id="3059f" class="javax.swing.JButton">
+      <component id="3059f" class="javax.swing.JButton" binding="button1" custom-create="true">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="&amp;Button"/>
         </properties>
       </component>
       <component id="cac96" class="javax.swing.JCheckBox">
